# TinyOAuth2.0PoC_ResourceServer

./: Cargo.toml  readme.md  start_resource_server.bat
src/: main.rs  mods.rs
src/mods/: db.rs
src/mods/config/: config.rs
src/mods/db/: models.rs  repository.rs
src/mods/routes/: routes.rs
src/mods/services/: token.rs
src/mods/util/: request.rs  response.rs
src/mods/util/request/: versatale.rs
src/mods/util/response/: token.rs  versatale.rs
